<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:backgroundTint="@color/app_background_color_tint"
    tools:context=".EventCreateFragment">

    <LinearLayout
        android:id="@+id/button_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".EventRatingFragment">


        <Button
            android:id="@+id/green_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#5EAF4C"
            android:text="@string/event_view_rating_green"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#D1C244"
            android:text="@string/event_view_rating_yellow"
            android:textColor="#4A3A06" />

        <Button
            android:id="@+id/red_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DD3838"
            android:text="@string/event_view_rating_red"
            android:textColor="#6A0F0F" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
