<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7E7"
    android:backgroundTint="#FFF7E7"
    tools:context=".EventCreateFragment">


    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/omschrijving"
        android:textColor="#978364"
        android:textColorHighlight="#978364"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/startDateText"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_datum"
        android:textColor="#978364"
        android:textColorHighlight="#978364"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/eind_datum"
        android:textColor="#978364"
        android:textColorHighlight="#978364"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="391dp"
        android:layout_height="48dp"
        android:background="#ECD5B3"
        android:ems="10"
        android:hint="@string/evenement_naam"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/naam"
        android:textColor="#978364"
        android:textColorHighlight="#978364"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoText="false"
        android:background="#B5A898"
        android:capitalize="none"
        android:text="Aanmaken"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/startDateInput"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="#ECD5B3"
        android:hint="@string/datum"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/startTimeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <TextView
        android:id="@+id/startTimeInput"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="#ECD5B3"
        android:hint="@string/tijdstip"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startDateInput"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <TextView
        android:id="@+id/endDateInput"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="#ECD5B3"
        android:hint="@string/datum"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/endTimeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />

    <TextView
        android:id="@+id/endTimeInput"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="#ECD5B3"
        android:hint="@string/tijdstip"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endDateInput"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="391dp"
        android:layout_height="148dp"
        android:autofillHints=""
        android:background="#ECD5B3"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/evenement_omschrijving"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:scrollHorizontally="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#B5A898"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#B5A898"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#B5A898"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateInput" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#B5A898"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateInput" />

</androidx.constraintlayout.widget.ConstraintLayout>